--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        buildConfigField "String", "API_ENDPOINT", "\"http://private-435228-vanhackathonmybesthelper.apiary-mock.com/\""
     }
     buildTypes {
         release {
