--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.0.1'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
 }
