--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
             android:screenOrientation="portrait" />
 
         <activity
+            android:name=".results.ResultsActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
+
+        <activity
             android:name=".StartActivity"
             android:screenOrientation="portrait">
             <intent-filter>
