--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
     compile 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
+    compile 'com.mobsandgeeks:android-saripaar:2.0.3'
 }
