--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-        buildConfigField "String", "API_ENDPOINT", "\"http://private-435228-vanhackathonmybesthelper.apiary-mock.com/\""
+        buildConfigField "String", "API_ENDPOINT", "\"https://daividsampleapis.herokuapp.com/\""
     }
     buildTypes {
         release {
